<resources>
    <string name="app_name">MV Nutritionist</string>
    <string name="app_longName">My Virtual Nutritionist</string>
    <string name="title_home">Home</string>
    <string name="title_diary">Diary</string>
    <string name="title_plans">Plans</string>
    <string name="title_me">Me</string>
    <string name="title_notification">Notifications</string>

    <!--For Home Window-->
    <string name="BMRate">Basal Metabolic Rate (BMR)</string>
    <string name="healthyTips">Healthy Tips</string>

    <!--For Diary Window-->
    <string name="calorieGoals">Calorie Goals</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="addFood">Click to Add Foods</string>
    <string name="nutrition">Nutrition</string>

    <!--For Home Window (Card View)-->
    <string name="tipTitle">Tip Title</string>
    <string name="tipDescription">Tip Description</string>
    <string name="title_activity_nutrition_main">NutritionMain</string>

    <!--For Tabbed Activity-->
    <string name="nutritionTab_text_1">Calories</string>
    <string name="nutritionTab_text_2">Nutrients</string>

    <!--For Calories Window-->
    <string name="totalCalories">Total Calories</string>
    <string name="netCalories">Net Calories</string>
    <string name="goal">Goal</string>

    <!--For Nutrients Window(Table)-->
    <string name="tableTotal">Total</string>
    <string name="tableGoal">Goal</string>
    <string name="tableLeft">Left</string>

    <!--For Plans Window (Card View)-->
    <string name="planTitle">Plan Title</string>
    <string name="planDate">Date</string>
    <string name="planStatus">Status</string>

    <!--For Me Window-->
    <string name="profile">Profile</string>
    <string name="status">Status</string>
    <string name="personalInfo">Personal Information</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="age">Age</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="bmi">Body Mass Index</string>
    <string name="weightStatus">Weight Status</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!--For First Layout-->
    <string name="goBtn">Go</string>

</resources>