<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.myvirtualnutritionist.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.android.myvirtualnutritionist.ui.diary.DiaryFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/navigation_plans"
        android:name="com.android.myvirtualnutritionist.ui.plans.PlansFragment"
        android:label="@string/title_plans"
        tools:layout="@layout/fragment_plans" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.android.myvirtualnutritionist.ui.plans.PlansFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_plans" />
</navigation>