<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/planCardDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/planDate"
            android:textSize="18sp"/>

        <View
            android:id="@+id/planCardDivider"
            android:layout_below="@+id/planCardDate"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="?android:attr/listDivider"/>

        <ImageView
            android:id="@+id/planCardImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:layout_below="@+id/planCardDivider"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_sync_24" />

        <TextView
            android:id="@+id/planCardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/planCardImage"
            android:layout_below="@+id/planCardDivider"
            android:text="@string/planTitle"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/planCardStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/planCardTitle"
            android:layout_toEndOf="@id/planCardImage"
            android:drawablePadding="2dp"
            android:text="@string/planStatus" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>