<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/MVTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/app_longName" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:layout_below="@+id/MVTitle"
            android:layout_centerHorizontal="true">

            <!--        Age-->
            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="71dp"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:padding="10dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/editTextAgeFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="1dp"
                android:layout_toEndOf="@+id/textViewAge"
                android:hint="Enter Age here"
                android:textAlignment="textEnd"
                android:padding="10dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="18sp"/>

            <View
                android:id="@+id/InfoDividerAge"
                android:layout_below="@+id/editTextAgeFirst"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="?android:attr/listDivider"/>

            <!--        Gender-->
            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="12dp"
                android:layout_below="@+id/InfoDividerAge"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:padding="10dp"
                android:textSize="18sp"/>

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/textViewGender"
                android:orientation="horizontal"
                android:layout_below="@+id/InfoDividerAge">

                <RadioButton
                    android:id="@+id/radioMaleFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="10dp"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioFemaleFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/female" />

            </RadioGroup>

            <View
                android:id="@+id/InfoDividerGender"
                android:layout_below="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="?android:attr/listDivider"/>

            <!--        Height-->
            <TextView
                android:id="@+id/textViewHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/InfoDividerGender"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:padding="10dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/editTextHeightFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="1dp"
                android:layout_toEndOf="@+id/textViewHeight"
                android:layout_below="@+id/InfoDividerGender"
                android:hint="Enter Height here"
                android:textAlignment="textEnd"
                android:padding="10dp"
                android:textSize="18sp"
                android:ems="10"
                android:inputType="number"/>

            <View
                android:id="@+id/InfoDividerHeight"
                android:layout_below="@+id/editTextHeightFirst"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="?android:attr/listDivider"/>

            <!--        Weight-->
            <TextView
                android:id="@+id/textViewWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="12dp"
                android:layout_below="@+id/InfoDividerHeight"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:padding="10dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/editTextWeightFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/InfoDividerHeight"
                android:layout_toEndOf="@+id/textViewWeight"
                android:hint="Enter Weight here"
                android:textAlignment="textEnd"
                android:padding="10dp"
                android:textSize="18sp"
                android:ems="10"
                android:inputType="number"/>

            <View
                android:id="@+id/InfoDividerWeight"
                android:layout_below="@+id/editTextWeightFirst"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="?android:attr/listDivider"/>

        </RelativeLayout>

            <Button
                android:id="@+id/goButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="18sp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginEnd="63dp"
                android:text="@string/goBtn" />

    </RelativeLayout>

</ScrollView>

