<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".ui.diary.nutrition.CaloriesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="330dp"
            android:layout_height="330dp"

            android:layout_marginBottom="6dp" />

        <View
            android:id="@+id/totalDivider"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:id="@+id/text_Nutrition_totalCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/totalCalories"/>

        <TextView
            android:id="@+id/text_Nutrition_totalCaloriesCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_marginBottom="6dp"/>

        <View
            android:id="@+id/netDivider"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:id="@+id/text_Nutrition_netCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/netCalories"/>

        <TextView
            android:id="@+id/text_Nutrition_netCaloriesCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_marginBottom="6dp"/>

        <View
            android:id="@+id/goalDivider"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:id="@+id/text_Nutrition_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/goal"/>

        <TextView
            android:id="@+id/text_Nutrition_goalCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_marginBottom="6dp"/>

    </LinearLayout>
</ScrollView>